--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                     <p>Taylor Swift Hits on your fingertip</p>
                 </div>    
                 <div data-folder="bollywoodMix" class="card">
-                    <div class="img/play">
-                        <img src="play.svg">
+                    <div class="play">
+                        <img src="img/play.svg">
                     </div>
                     <img src="https://i.scdn.co/image/ab67616d00001e02083b65ccb6bbec16c8d56eb4" alt="">
                     <h2>Bollywood Mix!</h2>
