--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" data-encore-id="icon" height="24" role="img" aria-hidden="true" viewBox="0 0 24 24" class="Svg-sc-ytk21e-0 bneLcE"><path fill="rgb(179, 179, 179)" d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"></path></svg>
                 Your Library
                 <svg xmlns="http://www.w3.org/2000/svg" id="plus" data-encore-id="icon" height="15" role="img" style="position: absolute; right:20px;" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path fill="rgb(179, 179, 179)" d="M15.25 8a.75.75 0 0 1-.75.75H8.75v5.75a.75.75 0 0 1-1.5 0V8.75H1.5a.75.75 0 0 1 0-1.5h5.75V1.5a.75.75 0 0 1 1.5 0v5.75h5.75a.75.75 0 0 1 .75.75z"></path></svg>   
-                <div class="back"><img src="back.svg" alt=""></div>
+                <div class="back"><img src="img/back.svg" alt=""></div>
             </div>
 
             <div class="createPlaylist">
