--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="menu"><img src="img/menu.svg" alt=""></div>
             </div>
             <div class="cardContainer">
-                <div data-folder="pop" class="card">
+                <div data-folder="Pop" class="card">
                     <div class="play">
                         <img src="img/play.svg">
                     </div>
@@ -88,7 +88,7 @@
                     <h2>Taylor Version!</h2>
                     <p>Taylor Swift Hits on your fingertip</p>
                 </div>    
-                <div data-folder="bollywoodmix" class="card">
+                <div data-folder="bollywoodMix" class="card">
                     <div class="play">
                         <img src="img/play.svg">
                     </div>
@@ -104,7 +104,7 @@
                     <h2>Kdrama/Kpop Lover!</h2>
                     <p>Your favourite osts are here</p>
                 </div>
-                <div data-folder="demilevato" class="card">
+                <div data-folder="demiLevato" class="card">
                     <div class="play">
                         <img src="img/play.svg">
                     </div>
